addded getOneUser route documentation
