# docs/swagger.json
@@ -13,9 +13,6 @@
         "/user": {
             "get": {
                 "description": "Get all accounts",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -96,6 +93,23 @@
                         "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/error.AppError"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/{id}": {
+            "get": {
+                "description": "Get one account",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get account",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.User"
                         }
                     }
                 }
